# 3DOCR

./: CMakeLists.txt
src/: camera.cpp  camera.h  main.cpp  takePicture3D.cpp
